# darken

./: LICENSE  example.py  pyproject.toml  readme.md
darken/: __init__.py
