[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "darken"
author = "Matthias Bussonnier"
author-email = "bussonniermatthias@gmail.com"
home-page = "https://github.com/Carreau/darken"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "readme.md"


[tool.flit.scripts]
darken = "darken:main"

